# miniadk

./: .gitignore  LICENSE  README.md  README.zh-CN.md  package.json  pyproject.toml
.github/workflows/: build-tui.yml  test.yml  workflow.yml
docs/: SAFETY.md  architecture.md  tui-protocol.md
examples/: 01_hello_agent.py  02_with_a_tool.py  03_streaming.py  04_session_and_compaction.py  05_middleware.py  06_run_cli.py  07_repo_assistant.py  08_custom_policy.py  09_mcp_client.py  10_skills_router.py  README.md  anthropic_file_assistant.py  cli_interaction_lab.py  coder_preset.py  compact_coder.py  openai_file_assistant.py  repo_cli.py  scripted_tiny_product.py  smoke_llm.py
examples/custom_tui/: README.md  package.json  run.sh  tui.tsx
examples/repo_cli_skills/fix/: SKILL.md
examples/repo_cli_skills/plan/: SKILL.md
examples/repo_cli_skills/review/: SKILL.md
examples/repo_cli_skills/tests/: SKILL.md
src/miniadk/: __init__.py  _guards.py  _tui_fetch.py  agentic.py  env.py  mcp.py  presets.py  run.py  sessions.py  skills.py
src/miniadk/adapters/: __init__.py  _cli_input.py  _cli_ui.py  _guards.py  _terminal_cli.ts  cli.py  json.py  web.py  ws.py
src/miniadk/core/: __init__.py  agent.py  events.py  messages.py  middleware.py  model.py  policy.py  runtime.py  session.py  tools.py
src/miniadk/models/: __init__.py  _errors.py  _http.py  _schema.py  anthropic.py  factory.py  openai.py
src/miniadk/stdtools/: __init__.py  agents.py  files.py  kit.py  shell.py  web.py
tests/: test_agentic.py  test_cli.py  test_core_imports.py  test_env.py  test_examples.py  test_http_transport.py  test_import_isolation.py  test_json_adapter.py  test_mcp.py  test_model_adapters.py  test_permissions.py  test_presets.py  test_public_api.py  test_run_helpers.py  test_runtime.py  test_session.py  test_sessions.py  test_skills.py  test_stdlib_tools.py  test_tool.py  test_tui.py  test_tui_interrupt.py  test_tui_slash.py  test_web_adapter.py  test_ws_adapter.py
tui-ts/: README.md  bunfig.toml  package.json  tsconfig.json
tui-ts/src/: App.tsx  bootstrap.ts  index.tsx  lib.ts  protocol.ts  theme.ts
tui-ts/src/__tests__/: fuzzy.test.ts  transcript.test.ts
tui-ts/src/components/: ActivityLine.tsx  Autocomplete.tsx  CommandPalette.tsx  Markdown.tsx  PermissionModal.tsx  PromptInput.tsx  StatusBar.tsx  Transcript.tsx  (+1 more)
(+14 files in other folders)
