[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "miniadk"
version = "0.1.0"
description = "A tiny Python agent runtime with tools, middleware, and events."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Saglear" }]
dependencies = ["prompt-toolkit>=3.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/miniadk"]
